# sky-music-play-lite

./: .gitignore  AGENTS.md  AGENTS.zh-CN.md  LICENSE  LICENSE.md  README.md  README.zh-CN.md  README_EN.md  index.html  package-lock.json  package.json  vite.config.ts
docs/: phase-7-playback-state.md  scores-v2-format.md
docs/examples/: chi-ling-v2-single.txt  scores-v2-sample.txt
font/: demo_index.html
font_5185981_ws56cq2qimf/: iconfont.css  iconfont.js  iconfont.json
public/: update-manifest.test.json
public/builtin-scores/: index.json
scripts/: generate-builtin-score-index.mjs
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_data.rs  app_log.rs  app_window.rs  experimental_input.rs  imported_scores.rs  lib.rs  main.rs  window_state.rs
src-tauri/src/experimental_input/: background_playback.rs  foreground_input.rs  key_mapping.rs  mod.rs  playback_engine.rs  sky_window_monitor.rs  stubs.rs  target_window_message.rs  window.rs
src-tauri/windows/: installer.nsi
src/components/: AppNoticeToast.tsx  AppShell.test.ts  AppShell.tsx  BottomPlayer.tsx  ConfirmDialog.tsx  CreatePlaylistDialog.tsx  GenerateSustainMelodyDialog.test.ts  GenerateSustainMelodyDialog.tsx  HomePanel.tsx  LibraryPanel.test.ts  LibraryPanel.tsx  LogPanel.tsx  PanelHeader.tsx  PlaybackPanel.tsx  PlayerIcons.tsx  QueuePanel.tsx  RenamePlaylistDialog.tsx  ScorePanel.tsx  SettingsPanel.tsx  UpdateDialog.tsx  UpgradeScoreToV2Dialog.test.ts  (+1 more)
src/config/: update.ts
(+1739 files in other folders)
